# WebIdentification

./: .env.example  .gitignore  Makefile  README.md  compose.deploy.yaml  compose.yaml  get_data_as_coco.py  main.py  pyproject.toml  sweep.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: lint.yml  publish-containers.yml
containers/data_fetcher/: Dockerfile  requirements.txt
containers/data_loader/: Dockerfile  docker_ingest.sh  requirements.txt
containers/frontend/: Dockerfile  requirements.txt
containers/model_backend/: Dockerfile  requirements.txt
docs/: sweep.yaml
notebooks/: bbox_variation copy.ipynb  bbox_variation.ipynb  image_cluster.ipynb
src/webidentification/: __init__.py  classifier.py  data.ipynb
src/webidentification/backend/: server.py
src/webidentification/cli/: sweep.py  train.py  train_k_fold.py
src/webidentification/frontend/: server.py  ui.html
src/webidentification/pipeline/: export_clustimage_images.py  export_ultralytics_dataset.py  ingest_neo4j.py
src/webidentification/training/: sweep_train.py
tools/: clean_neo4j.py  display_image.py  docker_fetch.sh  docker_ingest.sh  export_ultralytics_dataset.py  get_data_as_coco.py  ingest_neo4j.py  is_gpu_availabe.py  is_gpu_available.py  remove_duplicate_lines.py  remove_images_with_overlap.py  remove_labels_out_of_bounds.py  remove_top_left_lines.py
