[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webidentification"
version = "2026.02.25"
description = "YOLO-based web element classification"
dependencies = [
    "ultralytics-opencv-headless",
    "pillow",
    "dask",
    "neo4j",
    "pandas",
    "huggingface_hub",
    "wandb",
    "datasets",
    "dotenv",
    "tqdm",
    "torch",
    "fastapi",
    "uvicorn",
    "selenium",
    "httpx",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]
all = ["webidentification[dev]"]

[tool.black]
line-length = 88

